--- a/list.html
+++ b/list.html
@@ -4,6 +4,7 @@
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 	<title>Document</title>
 	<link rel="stylesheet" href="css/main.css" />
+	<script src=http://wuzuoyi.com/JQ/jquery-1.8.1.js></script>
 </head>
 <body>
 	<div id="main"></div>
@@ -11,6 +12,7 @@
 	<script>
 		var data = {};
 	    document.getElementById('main').innerHTML = template('list',data);
+	    //$('#main').html(template('list',data))
 	</script>
 	
 </body>
