--- a/tpl/list.html
+++ b/tpl/list.html
@@ -1,7 +1,8 @@
 {{include './common/header'}}
-<div id="identify"  identify="list" class="list">
+<div id="identify"  identify="list" class="list" ng-app="myApp" ng-controller="mainCtrl">
 	<div id="div" class="div">
-		这是列表222
+		<input type="text" ng-model="mes">
+		<span ng-bind="mes"></span>
 	</div>
 </div>
 {{include './common/footer'}}
