--- a/index.html
+++ b/index.html
@@ -9,12 +9,17 @@
 	
 </head>
 <body>
-	<div id="main"></div>
-	<script src="build/template.js"></script>
-	<script>
-		var data = {};
-	    document.getElementById('main').innerHTML = template('index',data);
-	</script>
+		<header>
+		这里是头部信aad
+	</header>
+	<div id="identify"  identify="index" class="index">
+		<div id="div" class="div">
+			sfjsfnsk
+	</div>
+		<div id="footer">
+		这是尾部swwsfsfsfsfsfsffsgsgsgd
+	</div>
+
 
 </body>
 </html>
