--- a/tpl/index.html
+++ b/tpl/index.html
@@ -1,7 +1,23 @@
-{{include './common/header'}}
-<div id="identify"  identify="index" class="index">
-	<div id="div" class="div">
-		sfjsfnskfnsfnfsfsfs
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
+<head>
+	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+	<title>Document</title>
+	<link rel="stylesheet" href="css/main.css" />
+	<script type="text/javascript" src="js/lib/mock/mock.js"></script>
+	<script type="text/javascript" src="js/lib/mock/mockDemo.js"></script>
+	
+</head>
+<body>
+	<!--#insert file="-header.html" -->
+	<div id="identify"  identify="index" class="index">
+		<div id="div" class="div">
+			sfjsfnsk
 	</div>
-</div>
-{{include './common/footer'}}
+	<!--#insert file="-footer.html" -->
+
+
+</body>
+</html>
+<script type="text/javascript" src="js/init.js"></script>
+
