--- a/tpl/list.html
+++ b/tpl/list.html
@@ -1,8 +1,24 @@
-{{include './common/header'}}
-<div id="identify"  identify="list" class="list" ng-app="myApp" ng-controller="mainCtrl">
-	<div id="div" class="div">
-		<input type="text" ng-model="mes">
-		<span ng-bind="mes"></span>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
+<head>
+	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+	<title>Document</title>
+	<link rel="stylesheet" href="css/main.css" />
+	<script src=http://wuzuoyi.com/JQ/jquery-1.8.1.js></script>
+</head>
+<body>
+	<!--#insert file="-header.html" -->
+	<div id="identify"  identify="list" class="list" ng-app="myApp" ng-controller="mainCtrl">
+		<div id="div" class="div">
+			<button ng-click="getData()">按钮</button>
+			<ul ng-repeat="data in datas">
+				<li>
+					<input type="text" ng-model="data.names">
+				</li>
+			</ul>
+		</div>
 	</div>
-</div>
-{{include './common/footer'}}
+	<!--#insert file="-footer.html" -->
+</body>
+</html>
+<script type="text/javascript" src="js/init.js"></script>
